# perceptra-inference

./: Dockerfile  Dockerfile.gpu  README.md  config.yaml  pyproject.toml
perceptra_inference/: __init__.py  config.py  exceptions.py  model_registry.py  models.py
perceptra_inference/backends/: base.py  onnx_yolo.py
perceptra_inference/utils/: image_io.py  nms.py
service/: main.py  middleware.py  routes.py
